# tinyrag

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
docs/: api.md  plan.md
src/: main.py
src/config/: __init__.py  config.py
src/core/: base.py  common.py  constant.py  error.py  format.py  success.py  type.py
src/data/db/: __init__.py
src/data/db/migration/: 0002_document.py  0003_prompt.py
src/data/db/model/: __init__.py  document.py  prompt.py
src/data/repo/: __init__.py  document_db.py  prompt_db.py
src/data/repo/interface/: document.py  prompt.py
src/data/schema/chat/: __init__.py  chat.py
src/data/schema/document/: __init__.py  document.py
src/data/schema/health/: __init__.py  health.py
src/data/schema/prompt/: __init__.py  prompt.py
src/data/type/: __init__.py  core.py  llm.py
src/lib/: document_loader.py  llm_factory.py
src/route/: __init__.py
src/route/chat/: __init__.py  chat.py
src/route/document/: __init__.py  upload.py
src/route/documents/: __init__.py  crud.py
src/route/health/: __init__.py  health.py
src/route/prompt/: __init__.py  crud.py
src/scripts/: migrate.py
src/service/: __init__.py  document_service.py  ingestion_service.py  prompt_service.py  rag_service.py  vectorstore_service.py
src/service/health/: __init__.py  health_service.py
